proyecto-1-kubernetes/k8s/k8s-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-auth
  annotations:
    cloud.google.com/backend-config: '{"default": "auth-config"}'
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31020
---

kind: Service
apiVersion: v1
metadata:
  name: service-sport
  annotations:
    cloud.google.com/backend-config: '{"default": "sport-config"}'
spec:
  type: NodePort
  selector:
    app: sport
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31021
---

kind: Service
apiVersion: v1
metadata:
  name: service-sub
  annotations:
    cloud.google.com/backend-config: '{"default": "sub-config"}'
spec:
  type: NodePort
  selector:
    app: sub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31022
---

kind: Service
apiVersion: v1
metadata:
  name: service-orchestrator
  annotations:
    cloud.google.com/backend-config: '{"default": "orchestrator-config"}'
spec:
  type: NodePort
  selector:
    app: orchestrator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31023
